--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumebackups.yaml
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumerestores.yaml
 - bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
-- bases/cloud-resources.kyma-project.io_nfsbackupschedules.yaml
+- bases/cloud-resources.kyma-project.io_gcpnfsbackupschedules.yaml
 - bases/cloud-control.kyma-project.io_redisinstances.yaml
 - bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
 - bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
@@ -41,6 +41,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_awsvpcpeerings.yaml
 #- path: patches/webhook_in_cloud-resources_gcpredisinstances.yaml
 #- path: patches/webhook_in_cloud-resources_awsredisinstances.yaml
+#- path: patches/webhook_in_cloud-resources_gcpnfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -62,6 +63,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_awsvpcpeerings.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpredisinstances.yaml
 #- path: patches/cainjection_in_cloud-resources_awsredisinstances.yaml
+#- path: patches/cainjection_in_cloud-resources_gcpnfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
