--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -249,6 +249,32 @@ rules:
 - apiGroups:
   - cloud-resources.kyma-project.io
   resources:
+  - azureredisinstances
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - azureredisinstances/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - azureredisinstances/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
   - azurevpcpeerings
   verbs:
   - create
