--- a/.github/workflows/pr-golang-lint.yml
+++ b/.github/workflows/pr-golang-lint.yml
@@ -20,4 +20,5 @@ jobs:
         uses: golangci/golangci-lint-action@v6.0.1
         with:
           version: v1.59
+          args: --timeout=10m
         continue-on-error: true
