--- a/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
+++ b/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
@@ -149,8 +149,11 @@ spec:
             - scope
             type: object
             x-kubernetes-validations:
-            - message: IpRange is required.
-              rule: (has(self.instance.openStack) || has(self.ipRange) && has(self.ipRange.name))
+            - message: IpRange can not be specified for openstack, and is mandatory
+                for gcp and aws.
+              rule: (has(self.instance.openStack) || false) && !has(self.ipRange)
+                || (has(self.instance.aws) || has(self.instance.gcp) || false) &&
+                has(self.ipRange)
           status:
             description: NfsInstanceStatus defines the observed state of NfsInstance
             properties:
